# FLOSS

./: .gitignore  AD4M-hREA-Integration-Analysis.md  ADR-N-IPFS-Integration-VVS.md  CLAUDE.md  Comprehensive_Research_Report__Agent-Centric,_Dist_2.md  EXECUTIVE-SUMMARY-AND-ACTION-PLAN.md  FLOSSIOULLK-Alignment-Verification.md  Fractal-Coordination-Patterns.md  INSTRUCTIONS_FOR_CODE.md  IPFS Integration_11-11-2025_EXECUTIVE-SUMMARY-AND-ACTION-PLAN.md  IPFS-Integration-Evolution-Summary.md  README (2).md  README.md  Week-1-Quick-Start-Guide.md  concrete plan for iterative distillation and synthesis.md  floss_foundational_tenants_synthesis_Version2.md  forming_roots.md  kalisam-amazon_rose_forest.txt  kalisam_floss_structure_Version2.md
ARF/dnas/infinity_bridge/zomes/patterns/: Cargo.toml  README.md  VERIFICATION.md
ARF/dnas/infinity_bridge/zomes/patterns/src/: lib.rs
ARF/dnas/infinity_bridge/zomes/patterns/tests/: integration_tests.rs  pattern_validation.rs
ARF/in.finite-nrg/infinity-bridge/firmware/bridges/acoustic-esp32/: Cargo.toml  README.md
ARF/in.finite-nrg/infinity-bridge/firmware/bridges/acoustic-esp32/src/: main.rs
code/project/: .env  Cargo.toml  README.md
code/project/dna/: dna.yaml
code/project/dna/zomes/fl_core/src/: lib.rs
code/project/src/: lib.rs  main.rs
code/project/src/core/: centroidCRDT.rs  metrics.rs  vector.rs
code/project/src/error/: mod.rs
code/project/src/nerv/: replication.rs
code/project/src/network/: circuit_breaker.rs
code/project/src/sharding/: manager.rs  migration.rs
code/project/tests/: holochain_integration.rs
(+281 files in other folders)
