[package]
name = "acoustic-esp32"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-svc = { version = "0.48", features = ["binstart"] }
esp-idf-hal = "0.43"
esp-idf-sys = { version = "0.34", features = ["binstart"] }
embedded-hal = "1.0"
infinity_bridge_hal = { path = "../../hal" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
microfft = "0.5"
heapless = "0.8"

[build-dependencies]
embuild = "0.31"

[profile.release]
opt-level = "z"
lto = true
